--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,10 +35,10 @@ jobs:
           go-version: "^1.21"
           check-latest: true
 
-      - name: Install PostgreSQL client tools
+      - name: Install PostgreSQL client tools and build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y postgresql-client
+          sudo apt-get install -y postgresql-client build-essential
 
       - name: Verify dependencies
         run: go mod verify
