--- a/taskfile.yml
+++ b/taskfile.yml
@@ -13,7 +13,7 @@ tasks:
       - mkdir -p {{.TMPDIR}}
       - mkdir -p {{.TMPDIR}}/migrations
       - mkdir -p {{.TMPDIR}}/backups
-      - go install github.com/lukaszraczylo/semver-generator@latest
+      - CGO_ENABLED=0 go install github.com/lukaszraczylo/semver-generator@latest
 
   status:
     desc: "Get the status of the database"
