Add test task to GitHub Actions workflow for improved coverage reporting

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -66,4 +66,5 @@ jobs:
           POSTGRES_DB: postgres
           CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
         run: |
+          task test
           task push-coverage
