--- a/.test.env
+++ b/.test.env
@@ -3,11 +3,11 @@
 # =============================================================================
 
 # Basic PostgreSQL Connection Settings
-POSTGRES_HOST=localhost
+POSTGRES_HOST=0.0.0.0
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=dbkit
+POSTGRES_DB=dbkit_test
 
 # =============================================================================
 # SSL/TLS Configuration
@@ -72,10 +72,10 @@ POSTGRES_LOG_LEVEL=INFO
 # =============================================================================
 
 # Directory containing Goose migrations
-MIGRATIONS_DIR=./migrations
+MIGRATIONS_DIR=./tmp/migrations
 
 # Directory for database backups
-BACKUPS_DIR=./backups
+BACKUPS_DIR=./tmp/backups
 
 # =============================================================================
 # Development/Testing Configuration
