--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -54,11 +54,8 @@ jobs:
         with:
           task-version: "3.40.0"
 
-      - name: Create necessary directories and setup environment
-        run: |
-          mkdir -p ./tmp
-          mkdir -p ./tmp/migrations
-          mkdir -p ./tmp/backups
+      - name: Setup
+        run: task setup
 
       - name: Build
         run: task build
@@ -71,6 +68,5 @@ jobs:
           if [ -f .test.env ]; then
             export $(grep -v '^#' .test.env | xargs)
           fi
-
           task test
           task push-coverage
