--- a/.test.env
+++ b/.test.env
@@ -72,10 +72,12 @@ POSTGRES_LOG_LEVEL=INFO
 # =============================================================================
 
 # Directory containing Goose migrations
-MIGRATIONS_DIR=./tmp/migrations
+# Note: In CI/CD environments, these will be overridden with temp directories
+MIGRATIONS_DIR=/tmp/test_migrations
 
 # Directory for database backups
-BACKUPS_DIR=./tmp/backups
+# Note: In CI/CD environments, these will be overridden with temp directories
+BACKUPS_DIR=/tmp/test_backups
 
 # =============================================================================
 # Development/Testing Configuration
