--- a/taskfile.yml
+++ b/taskfile.yml
@@ -5,6 +5,8 @@ dotenv: [".env"]
 env:
   TMPDIR: ./tmp
   TASK_TEMP_DIR: "{{.TMPDIR}}/.task"
+  MIGRATIONS_DIR: "{{.TMPDIR}}/migrations"
+  BACKUPS_DIR: "{{.TMPDIR}}/backups"
   GO: "CGO_ENABLED=0 go"
 
 tasks:
@@ -12,8 +14,8 @@ tasks:
     desc: "Setup the project"
     cmds:
       - mkdir -p {{.TMPDIR}}
-      - mkdir -p {{.TMPDIR}}/migrations
-      - mkdir -p {{.TMPDIR}}/backups
+      - mkdir -p {{.MIGRATIONS_DIR}}
+      - mkdir -p {{.BACKUPS_DIR}}
 
   status:
     desc: "Get the status of the database"
@@ -51,17 +53,22 @@ tasks:
     cmds:
       - ./scripts/release.sh
 
+  migrate-new:
+    desc: "Create a new migration"
+    cmds:
+      - CGO_ENABLED=0 go run main.go --user {{.POSTGRES_USER}} --password {{.POSTGRES_PASSWORD}} --db {{.POSTGRES_DB}} --migrations {{.MIGRATIONS_DIR}} migrate create {{.CLI_ARGS}}
+
   migrate-up:
     desc: "Migrate the database up"
     cmds:
-      - CGO_ENABLED=0 go run main.go --user {{.POSTGRES_USER}} --password {{.POSTGRES_PASSWORD}} --db {{.POSTGRES_DB}} migrate up
+      - CGO_ENABLED=0 go run main.go --user {{.POSTGRES_USER}} --password {{.POSTGRES_PASSWORD}} --db {{.POSTGRES_DB}} --migrations {{.MIGRATIONS_DIR}} migrate up
 
   migrate-reset:
     desc: "Reset the database"
     cmds:
-      - CGO_ENABLED=0 go run main.go --user {{.POSTGRES_USER}} --password {{.POSTGRES_PASSWORD}} --db {{.POSTGRES_DB}} migrate reset
+      - CGO_ENABLED=0 go run main.go --user {{.POSTGRES_USER}} --password {{.POSTGRES_PASSWORD}} --db {{.POSTGRES_DB}} --migrations {{.MIGRATIONS_DIR}} migrate reset
 
   migrate-down:
     desc: "Migrate the database down"
     cmds:
-      - CGO_ENABLED=0 go run main.go --user {{.POSTGRES_USER}} --password {{.POSTGRES_PASSWORD}} --db {{.POSTGRES_DB}} migrate down
+      - CGO_ENABLED=0 go run main.go --user {{.POSTGRES_USER}} --password {{.POSTGRES_PASSWORD}} --db {{.POSTGRES_DB}} --migrations {{.MIGRATIONS_DIR}} migrate down
