--- a/.test.env
+++ b/.test.env
@@ -77,6 +77,7 @@ MIGRATIONS_DIR=/tmp/test_migrations
 
 # Directory for database backups
 # Note: In CI/CD environments, these will be overridden with temp directories
+DATA_DIR=/tmp/test_backups
 BACKUPS_DIR=/tmp/test_backups
 
 # =============================================================================
